# python-ddd-estructure-example

./: pyproject.toml  readme.md  setup.py
app/: config.py  main.py  routes.py
app/controllers/: user_controller.py
app/routes/: routes.py  user_route.py
domain/models/: cliente.py  pedido.py  producto.py
domain/repositories/: repositorio_pedidos.py
domain/services/: servicio_pedido.py
infrastructure/database/repositories/: repositorio_pedidos.py
